--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
 1. Fix the removing of the SE-social popup (Fix the 'generateeee' text)
+2. Consider updating packages in outdated.txt (Consider doing >= instead of ==)
